[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pbarticles"
authors = [{name = "Bob Belderbos", email = "bob@pybit.es"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fpdf2>=2.5.4",
    "newspaper3k>=0.2.8",
    "python-dateutil>=2.8.2",
    "requests>=2.27.1",
    "requests-cache>=0.9.4",
    "requests-file>=1.5.1",
    "typer>=0.4.1",
]

[project.urls]
Home = "https://github.com/bbelderbos/pb_articles"

[project.scripts]
pbarticles = "pbarticles.__main__:main"
